@startuml Capital_Clash

skinparam classAttributeIconSize 0
skinparam monochrome false
skinparam shadowing false
skinparam defaultFontName Courier
skinparam defaultFontSize 12
skinparam classFontStyle bold
skinparam classBackgroundColor #DDEEFF
skinparam classBorderColor #333333
skinparam classHeaderBackgroundColor #B0C4DE
skinparam arrowColor #333333
skinparam stereotypeCBackgroundColor #E8E8E8
skinparam packageBackgroundColor #F5F5F5
skinparam packageBorderColor #AAAAAA

' ─────────────────────────────────────────────
' PAKET: Spieler & Kampf-Helfer
' ─────────────────────────────────────────────

package "Spieler & Kampf-Helfer" {

    class marx {
        + x : float
        + y : float
        + alive : bool
        + health_points : int
        + max_health : int
        + damage : int
        + attack_cooldown : int
        + exception_radius : int
        + screen_w : int
        + screen_h : int
        --
        + move(dx, dy)
        + draw(screen)
        + input_monitoring(keys, area, opps, settings)
        + get_damage(dmg, dmg_screen)
        + heal(amount)
        + tick_animation(is_moving)
        + get_rect() : Rect
        + get_exception_area() : tuple
        + update() : bool
        + dead()
    }

    class damage_area {
        + origin : marx
        + normal_width : int
        + widthmulti : int
        + color : tuple
        --
        + drawrect(screen)
        + getrect() : Rect
        + getparentposition() : tuple
        + turnred()
        + turnwhite()
    }

    class damage_screen {
        + duration : int
        + counter : int
        --
        + trigger()
        + draw(screen)
    }

    class health_bar {
        + x : int
        + y : int
        + width : int
        + height : int
        + max_health : int
        + object : any
        + follow : bool
        --
        + draw(screen)
    }
}

' ─────────────────────────────────────────────
' PAKET: Einstellungen
' ─────────────────────────────────────────────

package "Einstellungen" {

    class settings {
        + width : int
        + height : int
        - __fps : int
        - __round_duration : int
        - __player_health : int
        - __player_speed : int
        - __player_attack_damage : int
        - __player_attack_cooldown : int
        - __player_exception_radius : int
        + master_volume : int
        + music_volume : int
        + sfx_volume : int
        --
        + get_settings() : dict
        + save_settings()
        + load_settings()
        + window_settings(width, height)
        + volume_settings(master, music, sfx)
    }
}

' ─────────────────────────────────────────────
' PAKET: Gegner
' ─────────────────────────────────────────────

package "Gegner" {

    abstract class opponent {
        + alive : bool
        + health_points : int
        + speed : float
        + damage : int
        + collectible : str
        + collectible_chance : int
        + vx : float
        + vy : float
        + offset_x : float
        + offset_y : float
        + damagecooldown : int
        + tick : int
        --
        + followplayer(player)
        + checkcollision(player, dmg_screen)
        + getdamage(dmg)
        + gethealth() : int
        + move(dx, dy)
        + draw(screen)
        + animation()
        + set_position_out_of_range_of_player(player)
        + update() : bool
        + skinchange(new_image)
    }

    class normal_opp {
        + health_points = 150
        + speed ≈ 3.0
        + damage = 15
        + collectible = "aoe"
        + collectible_chance = 70
    }

    class super_opp {
        + health_points = 300
        + speed ≈ 2.0
        + damage = 25
        + collectible = "revive"
        + collectible_chance = 90
    }

    class mini_opp {
        + health_points = 60
        + speed ≈ 4.0
        + damage = 5
        + collectible = "heal"
        + collectible_chance = 30
    }

    class SpawnManager {
        + schedule : list
        + all_opponents : list
        + opp_bars : list
        --
        + tick(current_tick, player) : list
        + cleanup()
    }
}

' ─────────────────────────────────────────────
' PAKET: Collectibles
' ─────────────────────────────────────────────

package "Collectibles" {

    abstract class Collectible {
        + x : float
        + y : float
        + effect : str
        + collected : bool
        + player : marx
        + image : Surface
        + rect : Rect
        --
        + spawn(screen)
        + collectcheck(opponents)
        + trigger_effect(opponents)
    }

    class Heal {
        + effect = "health"
        ' Heilt Marx um +15 HP
    }

    class Aoe {
        + effect = "aoe"
        ' 30 Schaden an alle Gegner
    }

    class Revive {
        + effect = "revive"
        ' max_health += 10, HP = max
    }

    class collectible_manager {
        + player : marx
        + collectibles : list
        - _dropped : set
        - _COLLECTIBLE_MAP : dict
        --
        + collectible_tick(screen, opponents)
    }
}

' ─────────────────────────────────────────────
' PAKET: Boss
' ─────────────────────────────────────────────

package "Boss-Kampf" {

    class boss_opp {
        ' ── Klassen-Konstanten ──
        {static} PUNCH_RANGE : int = 200
        {static} PUNCH_DELAY : int = 45
        {static} PUNCH_COOLDOWN : int = 120
        {static} PUNCH_DAMAGE : int = 35
        {static} PUNCH_FRAMES : int = 3
        {static} PHASE_2_THRESHOLD : int = 500
        {static} CAST_COOLDOWN_BASE : tuple = (150, 250)
        {static} CAST_DELAY : int = 90
        {static} IMPACT_DAMAGE : int = 20
        {static} PROJECTILE_SPEED : int = 5
        ' ── Instanz-Attribute ──
        + max_health : int = 1000
        + health_points : int
        + alive : bool
        + phase : int
        + position : list
        + speed : float
        + vx : float
        + vy : float
        - _punch_cd : int
        - _punch_active : bool
        - _punch_tick : int
        - _cast_cd : int
        - _cast_active : bool
        - _cast_tick : int
        + anim_idle : Surface
        + anim_walk : Surface
        + anim_punch : list
        + anim_cast : list
        --
        + draw(screen)
        + get_rect() : Rect
        + get_center_position() : tuple
        + gethealth() : int
        + getdamage(dmg)
        + get_distance_to_player(player) : float
        + follow_player(player)
        + update_animation()
        + tick(player, projectiles, punch_area)
        - _check_phase()
        - _update_punch_cooldown(punch_area)
        - _check_and_trigger_punch(player, punch_area)
        - _update_punch_animation()
        - _update_cast_cooldown()
        - _check_and_trigger_cast(projectiles)
        - _update_cast_animation()
    }

    class punch_area {
        + boss : boss_opp
        + radius : int
        + color : tuple
        + active : bool
        + damage : int
        --
        + draw(screen)
        + getrect() : Rect
        + activate(damage, delay_frames)
        + tick(player)
        - _get_color() : tuple
        - _get_collision_rect() : Rect
    }

    class impact_area {
        + x : float
        + y : float
        + radius : int
        + active : bool
        + damage : int
        + delay_frames : int
        + player : marx
        - _timer : int
        --
        + activate(x, y)
        + tick()
        + draw(screen)
        + check_hit(player, dmg_screen)
        - _get_color() : tuple
        - _get_collision_rect() : Rect
    }

    class boss_projectile {
        + x : float
        + y : float
        + target_x : float
        + target_y : float
        + speed : int
        + alive : bool
        + dx_norm : float
        + dy_norm : float
        + image : Surface
        + angle : float
        --
        + draw(screen)
        + tick()
        + update()
    }
}

' ─────────────────────────────────────────────
' BEZIEHUNGEN
' ─────────────────────────────────────────────

' Vererbung (Gegner)
opponent <|-- normal_opp
opponent <|-- super_opp
opponent <|-- mini_opp

' Vererbung (Collectibles)
Collectible <|-- Heal
Collectible <|-- Aoe
Collectible <|-- Revive

' Assoziationen
marx "1" --> "1" damage_area    : nutzt >
marx "1" --> "1" damage_screen  : nutzt >
marx "1" --> "1" health_bar     : hat >

SpawnManager "1" --> "*" opponent  : erstellt >
SpawnManager "1" --> "*" health_bar : erstellt >

collectible_manager "1" --> "*" Collectible : verwaltet >
collectible_manager --> marx : kennt >

Collectible --> marx : referenziert >

boss_opp "1" --> "1" punch_area   : nutzt >
boss_opp "1" --> "*" impact_area  : erstellt (Phase 2) >
boss_opp "1" --> "*" boss_projectile : spawnt >

health_bar --> marx        : liest HP >
health_bar --> opponent    : liest HP >
health_bar --> boss_opp    : liest HP >

@enduml
